@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_delete_tweet"
-          android:orderInCategory="1"
-          android:title="@string/menu_delete_tweet"
-          android:showAsAction="never"  />
 
     <item android:id="@+id/menu_share"
+        android:orderInCategory="1"
+        android:title="@string/menu_share"
+        android:icon="?shareButton"
+        android:showAsAction="always"
+        android:actionProviderClass="android.widget.ShareActionProvider"/>
+
+    <item android:id="@+id/menu_delete_tweet"
           android:orderInCategory="2"
-          android:title="@string/menu_share"
+          android:title="@string/menu_delete_tweet"
           android:showAsAction="never"  />
 
     <item android:id="@+id/menu_copy_text"
