@@ -50,6 +50,7 @@ limitations under the License.
     <attr name="directMessageItem" format="reference"/>
     <attr name="rectangle_border" format="reference"/>
     <attr name="emoji_button" format="reference"/>
+    <attr name="shareButton" format="reference"/>
 
     <!-- Drawer Icons -->
     <attr name="drawerIcon" format="reference"/>
