@@ -59,6 +59,7 @@ limitations under the License.
         <item name="directMessageItem">@drawable/ic_action_reply_light</item>
         <item name="rectangle_border">@drawable/rect_border_light</item>
         <item name="emoji_button">@drawable/ic_emoji_keyboard_dark</item>
+        <item name="shareButton">@drawable/ic_action_share_light</item>
 
         <item name="themeSettings">@drawable/drawer_theme_light</item>
         <item name="notificationSettings">@drawable/drawer_notifications_light</item>
